--- a/docs/components/textarea.html
+++ b/docs/components/textarea.html
@@ -133,7 +133,7 @@
     <div class="example">
       <div class="preview">
         <ui-textarea>
-          <textarea value="Disabled" disabled></textarea>
+          <textarea disabled></textarea>
         </ui-textarea>
       </div>
       <div class="toolbar">
