--- a/ui/components/field/field.css
+++ b/ui/components/field/field.css
@@ -9,7 +9,7 @@ ui-field{
 
     & > span{
       padding-inline-start:6px;
-      color:var(--ui-color-red-500);
+      color:var(--color-red-500);
     }
   }
 
